--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     .btn.success{background:#d1fae5;border-color:#a7f3d0;color:#22c55e}
     .btn.success:hover{filter:brightness(0.98)}
     .prefix-input{position:relative} .prefix-input .prefix{position:absolute;left:10px;top:50%;transform:translateY(-50%);pointer-events:none;color:#9ca3af} .prefix-input input{padding-left:28px} .prefix-input input::placeholder{color:#d1d5db}
-    table{width:100%;border-collapse:collapse;font-size:14px} th,td{padding:8px 10px;border-bottom:1px solid var(--border);text-align:left} td.right{text-align:right}
+    table{width:100%;border-collapse:collapse;font-size:14px} th,td{padding:8px 10px;border-bottom:1px solid var(--border);text-align:left} td.right{text-align:right} td.center{text-align:center}
     .muted{color:var(--muted)}
     .card{border:1px solid var(--border);border-radius:12px;padding:12px;background:#fff}
     .modal-overlay{position:fixed;inset:0;background:rgba(0,0,0,.35);display:flex;align-items:center;justify-content:center;padding:16px;z-index:100}
@@ -80,6 +80,7 @@
     function parseAmount(s){ if(typeof s==='number') return s; if(!s) return 0; const clean=String(s).replace(/[^0-9,.-]/g,'').replace(',','.'); const n=parseFloat(clean); return Number.isFinite(n)?n:0; }
     function nameById(id){ const p=state.participants.find(p=>p.id===id); return p? p.name : '(?)'; }
     function escapeHtml(s){ return String(s).replace(/[&<>\"']/g, m=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[m])); }
+    function fmtDate(d){ try{ if(!d) return ''; const [y,m,da]=String(d).split('-'); return `${da.padStart(2,'0')}-${m.padStart(2,'0')}-${String(y).slice(2)}`; }catch(e){ return d||''; } }
 
     // ===== Calc =====
     function computePerHead(e){const amt=parseAmount(e.amount); if(!amt||amt<=0) return {}; const involved=(e.involvedIds||[]).filter(id=>state.participants.find(p=>p.id===id)); const per={}; if(involved.length===0) return per;
@@ -103,8 +104,8 @@
       while(i<debt.length && j<cred.length){const d=debt[i], c=cred[j]; const amt=Math.min(d.amount,c.amount); res.push({from:d.id,to:c.id,amount:amt}); d.amount-=amt; c.amount-=amt; if(d.amount<=1e-8) i++; if(c.amount<=1e-8) j++;} return res; }
 
     // ===== Render =====
-    function ensureDraft(fromExpense){ if(fromExpense){state.draft=JSON.parse(JSON.stringify(fromExpense)); return;} if(!state.draft){ state.draft={ id:uid(), desc:'', amount:'', date:new Date().toISOString().slice(0,10), payerId:(state.participants[0]?.id)||null, involvedIds:state.participants.map(p=>p.id), split:{mode:'equal'}, category:CATEGORIES[0] }; }
-      state.draft.payerId = (state.draft.payerId ?? (state.participants[0]?.id)) || null;
+    function ensureDraft(fromExpense){ if(fromExpense){state.draft=JSON.parse(JSON.stringify(fromExpense)); return;} if(!state.draft){ state.draft={ id:uid(), desc:'', amount:'', date:new Date().toISOString().slice(0,10), payerId:null, involvedIds:state.participants.map(p=>p.id), split:{mode:'equal'}, category:'' }; }
+      state.draft.payerId = state.draft.payerId || null;
       state.draft.involvedIds = (state.draft.involvedIds||[]).filter(id=>state.participants.find(p=>p.id===id));
       if(state.draft.involvedIds.length===0) state.draft.involvedIds = state.participants.map(p=>p.id);
     }
@@ -123,7 +124,7 @@
           <div style="flex:1;min-width:220px"><label class="block"><div class="label">Nuevo viajero</div><input id="inpNewName" placeholder="Nombre"></label></div>
           <button id="btnAddPerson" class="btn">Agregar</button>
         </div>
-        <div class="spacer"></div>
+        <div class="spacer" style="height:12px"></div>
         <div class="row" style="flex-wrap:wrap;gap:8px">
           ${state.participants.map(p=>`<span class="pill">${escapeHtml(p.name)} <button data-del="${p.id}" class="btn" style="padding:4px 6px;color:#b91c1c;border-color:#b91c1c">quitar</button></span>`).join('')}
           ${state.participants.length===0? '<span class="muted">Agregá viajeros para empezar</span>' : ''}
@@ -159,7 +160,7 @@
 
         <div class="grid grid-6">
           <div class="col"><label class="block"><div class="label">Categoría</div>
-            <select id="gCategory">${CATEGORIES.map(c=>`<option value="${c}" ${c===state.draft.category?'selected':''}>${c}</option>`).join('')}</select>
+            <select id="gCategory"><option disabled selected ${state.draft.category?'':'selected'}>Seleccioná</option>${CATEGORIES.map(c=>`<option value="${c}" ${c===state.draft.category?'selected':''}>${c}</option>`).join('')}</select>
           </label></div>
 
           <div class="col" style="grid-column: span 2"><label class="block"><div class="label">Descripción</div><input id="gDesc" placeholder="Ej: Cena, Nafta, Hotel" value="${escapeHtml(state.draft.desc)}"></label></div>
@@ -208,14 +209,14 @@
               <tbody>
               ${state.expenses.map(e=>`
                 <tr>
-                  <td>${e.date}</td><td>${e.desc? escapeHtml(e.desc) : '<span class="muted">(sin nota)</span>'}</td><td>${escapeHtml(e.category||'Otros')}</td>
+                  <td>${fmtDate(e.date)}</td><td>${e.desc? escapeHtml(e.desc) : '<span class="muted">(sin nota)</span>'}</td><td>${escapeHtml(e.category||'Otros')}</td>
                   <td>${escapeHtml(nameById(e.payerId))}</td><td>${e.involvedIds.map(nameById).map(escapeHtml).join(', ')}</td>
-                  <td>${({equal:'=',shares:'∝',percent:'%',exact:'≡'})[e.split?.mode||'equal']}</td>
+                  <td class="center">${({equal:'=',shares:'∝',percent:'%',exact:'≡'})[e.split?.mode||'equal']}</td>
                   <td class="right"><b>$ ${formatAmount(e.amount)}</b></td>
                   <td class="right">
                     <button class="btn" data-edit-exp="${e.id}">Editar</button>
                     <button class="btn" data-detail-exp="${e.id}">Detalle</button>
-                    <button class="btn danger" data-del-exp="${e.id}">Eliminar</button>
+                    <button class="btn danger" style="margin-left:6px" data-del-exp="${e.id}">Eliminar</button>
                   </td>
                 </tr>
               `).join('')}
@@ -310,11 +311,11 @@
             <canvas id="pie" width="320" height="320"></canvas>
             <div style="flex:1;min-width:260px;overflow-x:auto">
               <table>
-                <thead><tr><th>Categoría</th><th class="right">Total</th><th class="right">%</th></tr></thead>
+                <thead><tr><th>Categoría</th><th class="center">Total</th><th class="center">%</th></tr></thead>
                 <tbody>
                   ${keys.map(c=>`<tr><td>${escapeHtml(c)}</td><td class="right"><b>$ ${formatAmount(totals[c])}</b></td><td class="right">${grand? (totals[c]*100/grand).toFixed(1):'0.0'}%</td></tr>`).join('')}
                 </tbody>
-                <tfoot><tr><th>Total</th><th class="right">$ ${formatAmount(grand)}</th><th></th></tr></tfoot>
+                <tfoot><tr><th>Total</th><th style="text-align:left">$ ${formatAmount(grand)}</th><th></th></tr></tfoot>
               </table>
             </div>
           </div>`}
@@ -340,9 +341,9 @@
       document.querySelectorAll('[data-percent]').forEach(inp=>inp.addEventListener('input',e=>{state.draft.split.percents={...(state.draft.split.percents||{}),[inp.dataset.percent]:inp.value};}));
       document.querySelectorAll('[data-exact]').forEach(inp=>inp.addEventListener('input',e=>{state.draft.split.exact={...(state.draft.split.exact||{}),[inp.dataset.exact]:inp.value};}));
       const isEditing=!!state.editingId;
-      if(isEditing){document.getElementById('btnSaveEdit').addEventListener('click',()=>{const d=state.draft; if(!d.payerId) return; const amt=parseAmount(d.amount); if(!amt||amt<=0) return; state.expenses=state.expenses.map(x=>x.id===state.editingId?{...d,amount:amt}:x); state.draft=null; state.editingId=null; saveMaybe(); state.activeTab='gastos'; render();});
+      if(isEditing){document.getElementById('btnSaveEdit').addEventListener('click',()=>{const d=state.draft; const amt=parseAmount(d.amount); if(!d.category){alert('Seleccioná una categoría.'); return;} if(!d.payerId){alert('Seleccioná quién pagó.'); return;} if(!amt||amt<=0){alert('Ingresá un monto válido.'); return;} state.expenses=state.expenses.map(x=>x.id===state.editingId?{...d,amount:amt}:x); state.draft=null; state.editingId=null; saveMaybe(); state.activeTab='gastos'; render();});
         document.getElementById('btnCancelEdit').addEventListener('click',()=>{state.draft=null; state.editingId=null; render();});}
-      else{document.getElementById('btnAddExpense').addEventListener('click',()=>{const d=state.draft; if(!d.payerId) return; const amt=parseAmount(d.amount); if(!amt||amt<=0) return; const normalized={...d,amount:amt}; state.expenses=[normalized,...state.expenses]; state.draft=null; saveMaybe(); state.activeTab='gastos'; render();});}
+      else{document.getElementById('btnAddExpense').addEventListener('click',()=>{const d=state.draft; const amt=parseAmount(d.amount); if(!d.category){alert('Seleccioná una categoría.'); return;} if(!d.payerId){alert('Seleccioná quién pagó.'); return;} if(!amt||amt<=0){alert('Ingresá un monto válido.'); return;} const normalized={...d,amount:amt}; state.expenses=[normalized,...state.expenses]; state.draft=null; saveMaybe(); state.activeTab='gastos'; render();});}
       document.getElementById('btnClearExpense').addEventListener('click',()=>{state.draft=null; render();});
     }
 
